# news-proxy

./: Makefile  README.md  pyproject.toml
.github/workflow/: check-code.yml
.github/workflows/: check-code.yml
news_proxy/: engine.py  server_async.py
news_proxy/scripts/: news_proxy_server.py
tests/: test_proxy_server.py
tests/fixtures/: modify_text.txt  original_text.txt
